支持Java 8 API